--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
     <title>CertiShop</title>
 
+    <link rel="icon" href="./logo.png" type="image/icon type">
+
 <style>
     h1{color:white;}
     body{font-family:arial;}
