--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>CertiShop - Shop</title>
+
+    <link rel="icon" href="./logo.png" type="image/icon type">
    
 </head>
 
