--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>CertiShop</title>
 
 
-    <link rel="icon" href="./src/logo.png" type="image/icon type">
+    <link rel="icon" href="./logo.png" type="image/icon type">
 
 <style>
     h1{color:white;}
