--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
         <input type="hidden" name="access_key" value="ce45e459-9c12-48d8-ba22-8cb00d99df5e">        <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
         <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
         <textarea name="message" placeholder="Your Message"  class="contact-inputs" required></textarea>
-        <button type="submit">Submit<img src="assets/arrow_icon.png" alt=""></button> 
+        <button type="submit">Submit<img src="./arrow_icon.png" alt=""></button> 
         
       </form>
       <div class="contact-right">
-        <img src="assets/right_img.png" alt="">
+        <img src="./right_img.png" alt="">
             </div>
 
 </body>
