--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./logo.png" type="image/icon type">
 
 <style>
-    h1{color:white;}
+    h2{color:black;font-family:arial;}
     body{font-family:arial;}
 
 
