--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@ body {
 
 
 
- <h4>We sell a range of products, at a cheap price! starting from £5.99. Everything anyone could possibly need. All items are delivered within 7 days.</h4>
 
+</html> <h4>We sell a range of products, at a cheap price! starting from £5.99. Everything anyone could possibly need. All items are delivered within 7 days.</h4>
 
-
-
-
-</html>
