--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>CertiShop</title>
 
 
-    <link rel="icon" href="./logo.png" type="image/icon type">
+    <link rel="icon" href="./src/logo.png" type="image/icon type">
 
 <style>
-    h2{color:black;font-family:arial;}
+    h1{color:white;}
     body{font-family:arial;}
 
 
@@ -26,12 +26,9 @@ body {
 
 
 <body>
-    <h1>           ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎        ‎ ‎ ‎               <img src="./logo.png" alt=""> ‎ ‎ ‎ ‎‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  <a href="./shop.html"><img src="./shop.png" width="250px" alt="" /><a href="./contact.html"><img src="./contact.png"  width="250px"/> </h1>
-    </body>
+
+    <h1>           ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎        ‎ ‎ ‎               <img src="./logo.png" alt=""> ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  <a href="./shop.html"><img src="./shop.png" width="250px" alt="" /><a href="./contactform/contact.html"><img src="./contact.png"  width="250px"/> </a>
+    <h3>We sell a range of products, at a cheap price! starting from £5.99. Everything anyone could possibly need. All items are delivered within 7 days.</h3>
 
 
-
-
-
-</html> <h4>We sell a range of products, at a cheap price! starting from £5.99. Everything anyone could possibly need. All items are delivered within 7 days.</h4>
-
+</html>
