--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@ body {
 <body>
     <h1>  ‎ ‎‎ ‎ ‎  ‎  ‎ ‎ ‎‎ ‎ ‎  ‎  ‎ ‎ ‎‎ ‎ ‎  ‎  ‎ ‎ ‎‎ ‎ ‎  ‎  ‎ ‎ ‎‎ ‎ ‎  ‎Our Products:</h1>
     
-    <h2><a href='https://buy.stripe.com/7sIdUD3Oz5nYare144' >105 Key mechanical gaming keyboard</h2><img src="./src/105key.png" alt="." width="400" height="220">
+    <h2><a href='https://buy.stripe.com/7sIdUD3Oz5nYare144' >105 Key mechanical gaming keyboard</h2><img src="./105key.png" alt="." width="400" height="220">
         
 </body>
 
