--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>CertiShop</title>
 
 
-    <link rel="icon" href="./src/logo.png" type="image/icon type">
+    <link rel="icon" href="./logo.png" type="image/icon type">
 
 <style>
     h1{color:white;}
@@ -28,7 +28,8 @@ body {
 <body>
 
     <h1>           ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎        ‎ ‎ ‎               <img src="./logo.png" alt=""> ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  <a href="./shop.html"><img src="./shop.png" width="250px" alt="" /><a href="./contactform/contact.html"><img src="./contact.png"  width="250px"/> </a>
-    <h3>We sell a range of products, at a cheap price! starting from £5.99. Everything anyone could possibly need. All items are delivered within 7 days.</h3>
-
+<p> CertiShop is a small shop, however, we beat all others pricewise, You wont find better prices.
+After spending £35 get 15% off on your next order. 
+All information about orders on our <a href="./shop.html">Shop</a>  </p>
 
 </html>
