--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ body {
 <body>
 
     <h1>           ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎        ‎ ‎ ‎               <img src="./logo.png" alt=""> ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  <a href="./shop.html"><img src="./shop.png" width="250px" alt="" /><a href="./contactform/contact.html"><img src="./contact.png"  width="250px"/> </a>
-<p> CertiShop is a small shop, however, we beat all others pricewise, You wont find better prices.
+<h3> CertiShop is a small shop, however, we beat all others pricewise, You wont find better prices.
 After spending £35 get 15% off on your next order. 
-All information about orders on our <a href="./shop.html">Shop</a>  </p>
+All information about orders on our <a href="./shop.html">Shop</a>  </h3>
 
 </html>
