--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,14 @@
 <html lang="en">
 <head>
+  <link class="icon" href="./logo.png" type="image/icon type">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Form</title>
+  <title>Contact </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
+</div><h1>  <a href="index.html"><img src="logo.png" alt="" style="width:80px;height:80px;"></a> 
     <div class="contact-container"></div>
         <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
             <div class="contact-left-title"></div>
