--- a/index.html
+++ b/index.html
@@ -1,35 +1,27 @@
 <html>
-<head>
+    <head>
+        <title>Certishop</title>
+        <link rel="stylesheet" href="indexstyle.css">
+    </head>
+    <body>
+        <div class="banner">
+            <div class="navbar" >
+                <img src="logo.png" class="logo">
+                <ul>
+                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
 
-    <title>CertiShop</title>
+            <div class="content">
+                <h1>We beat any price!</h1>
+                <p>You won't find any cheaper<br>Goto to the <a href="index.html">Shop</a> To check our prices.</p>
+                <div>
+                  <button type="button"><span></span>OUR PRODUCTS</button>  
+                  <button type="button"><span></span>ABOUT US</button>  
+                </div>
+            </div>
+        </div>
 
-
-    <link rel="icon" href="./logo.png" type="image/icon type">
-
-<style>
-    h1{color:white;}
-    body{font-family:arial;}
-    
-
-
-
-body {
-    font-family: 'Outfit';
-    background: linear-gradient(#ffdad5, #fff7f9);
-}
-
-
-</style>
-
-
-</head>
-
-
-<body>
-
-    <h1>           ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎        ‎ ‎ ‎               <img src="./logo.png" alt=""> ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎  <a href="./shop.html"><img src="./shop.png" width="250px" alt="" /><a href="./contactform/contact.html"><img src="./contact.png"  width="250px"/> </a>
-<h3> CertiShop is a small shop, however, we beat all others pricewise, You wont find better prices.
-After spending £35 get 15% off on your next order. 
-All information about orders on our <a href="./shop.html">Shop</a>  </h3>
-
+    </body>
 </html>
