--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
                 <h1>We beat any price!</h1>
                 <p>You won't find any cheaper<br>Goto to the <a href="index.html">Shop</a> To check our prices.</p>
                 <div>
+                    <a href="shop.html">
                   <button type="button"><span></span>OUR PRODUCTS</button>  
-                  <button type="button"><span></span>ABOUT US</button>  
+                    </a>
+                    <a href="aboutus.html">
+                  <button type="button"><span></span>ABOUT US</button>
+                </a> 
                 </div>
             </div>
         </div>
