--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
         </div>
         <div class="socials"> 
             <h1>Our Social Medias</h1>
-            <p><br> Tiktok: Certishop.cc <Br><Br><br>instagram: Certishop </p>
+            <p><br> Tiktok: Certishop.cc <Br>instagram: Certishop </p>
         </div>
 
 
