--- a/aboutus.html
+++ b/aboutus.html
@@ -5,18 +5,24 @@
         
     </head>
     <body>
-        <img src="logo.png" class="logo">
         <div class="banner">
-        <h1>About us</h1>
-        <p>Certishop is a small e-commerce business that sells items at 50% of the price<br>Check out all of our products at the <a href="shop.html"> shop.<br>
-       </a> We have the cheapest prices around, we hope to bring a happy shopping experience to all of our customers.
-        <br>We promise to deliver our items within 7-14 days, if they havent been delivered by that time, <br>then we will issue you half of your money back.</p>
-
-        
+            <div class="navbar">
+            <img src="logo.png" class="logo">
+            <ul>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
         </div>
-        <div class="socials"> 
-            <h1>Our Social Medias</h1>
-            <p><br> Tiktok: Certishop.cc <Br>instagram: Certishop </p>
+        <div class="content">
+            <h1> About Us</h1>
+            <p>Certishop is a small online shop.<BR>
+            We aim to have the cheapest prices, and the best quality products<BR>
+            All products are delivered in 7-14 days, if the products are late, you get 50% of your money back!</p>
+        </div>
+        <div class="socials">
+            <h1>Our socials</h1>
+            <p>Tiktok: Certishop.cc</p>
+            <p>Instagram: OfficialCertishop</p>
         </div>
 
 
