--- a/shop.html
+++ b/shop.html
@@ -1,25 +1,41 @@
 <html>
 <head>
     <title>Shop</title>
+    <link rel="stylesheet" href="shopstyle.css">
+
    
+    <link rel="icon" href="./logo.png" type="image/icon type">
+
 </head>
 
 <style>
  h1{color:black;}
 
+
 body {
   background: linear-gradient(#ffdad5, #fff7f9);
   font-family: arial system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+  }
 
 </style>
 
 <body>
-    <h1>  ‎ ‎‎ ‎ ‎  ‎  ‎ ‎ ‎‎ ‎ ‎  ‎  ‎ ‎ ‎‎ ‎ ‎  ‎  ‎ ‎ ‎‎ ‎ ‎  ‎  ‎ ‎ ‎‎ ‎ ‎  ‎Our Products:</h1>
+
+
+
+  <div class="banner">
+    <div class="navbar">
+    <img src="logo.png" class="logo">
+    <ul>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+</div>
     
     <script async
     src="https://js.stripe.com/v3/buy-button.js">
   </script>
+  
   
   <stripe-buy-button
     buy-button-id="buy_btn_1QB1HjP8daDuxlW8ZjSI0VZa"
