--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,25 @@
 <html lang="en">
 <head>
-  <link class="icon" href="./logo.png" type="image/icon type">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="banner">
+    <div class="navbar" >
+        <img src="logo.png" class="logo">
+        <ul>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="aboutus.html">About us</a></li>
+        </ul>
+    </div>
  
-</div><h1>  <a href="index.html"><img src="logo.png" alt="" style="width:80px;height:80px;"></a> 
+</div>
     <div class="contact-container"></div>
         <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
             <div class="contact-left-title"></div>
-            <h2>Get in touch</h2>
+            <h1>Get in touch</h1>
             <hr>
         </div>
         <input type="hidden" name="access_key" value="e25b596a-2756-47b5-9d6b-fed6fdc96571,ddc5abb0-9b07-4222-8af1-e753de9d35b1" ><input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
@@ -20,10 +27,9 @@
         <textarea name="message" placeholder="Your Message"  class="contact-inputs" required></textarea>
         <button type="submit">Submit<img src="./arrow_icon.png" alt=""></button> 
         
-      </form>
-      <div class="contact-right">
-        <img src="./right_img.png" alt="">
-            </div>
+        </form>
+          
+
 
 </body>
 </html>
