--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
             <div class="navbar" >
                 <img src="logo.png" class="logo">
                 <ul>
-                    <li><a href="shop.html">Shop</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
 
             <div class="content">
                 <h1>We beat any price!</h1>
-                <p>You won't find any cheaper<br>Goto to the <a href="index.html">Shop</a> To check our prices.</p>
+                <p>You won't find any cheaper</p>
                 <div>
                     <a href="shop.html">
                   <button type="button"><span></span>OUR PRODUCTS</button>  
