--- a/shop.html
+++ b/shop.html
@@ -8,16 +8,7 @@
 
 </head>
 
-<style>
- h1{color:black;}
 
-
-body {
-  background: linear-gradient(#ffdad5, #fff7f9);
-  font-family: arial system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-
-</style>
 
 <body>
 
@@ -36,7 +27,8 @@ body {
     src="https://js.stripe.com/v3/buy-button.js">
   </script>
   
-  
+  <div class="products">
+
   <stripe-buy-button
     buy-button-id="buy_btn_1QB1HjP8daDuxlW8ZjSI0VZa"
     publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
@@ -67,13 +59,8 @@ body {
 >
 </stripe-buy-button>
 
-<h3>Currently, we do not have a wide range of products. However our prices beat all other!</h3>
-<p>Free delivery, items delivered within 7-14 days</p>
 
-    <h4>What happens if my items aren't delivered in 7-14 Days?</h4>
-    <p>If the item you ordered aren't delivered within the garanteed time you will be refunded 50% </p>
-    
-</body>
+</div>
 
 
 
