--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact </title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="contactusstyle.css">
 </head>
 <body>
   <div class="banner">
