--- a/shop.html
+++ b/shop.html
@@ -1,106 +1,115 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: arial;
-}
-.socials{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: translate(-50%);
-    color: rgb(23, 20, 20);
-}
-.socials h1{
-    font-size: 70px;
-    width: 91%;
-}
-.products{
-    color: white;
-    display:ruby-base;
-    align-items: flex-end;
-    justify-content: space-around;
-    font-weight: none;
-}
+<html>
+<head>
+    <title>Shop</title>
+    <link rel="stylesheet" href="shopstyle.css">
 
-.pinfo{
-    color: white;
-    margin-top: 95px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: none;
-    font-family: sans-serif;
-}
-.pinfo2{
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: none;
-    font-family: sans-serif;
-}
-.socials p{
-    width: 81%;
-    margin-left: 30px;
-    font-weight: none;
-    color: white;
-    position: relative;
-}
-.banner{
-    width: 100%;
-    height: 100vh;
-    background-image: url("https://wallpapercave.com/wp/wp2740690.jpg");
-    background-size: cover;
-    background-position: center;
-}
-.navbar{
-    padding: 35px 0;
-    font-weight: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.logo{
-    width: 80px;
-    cursor: pointer;
-}
-.navbar ul li{
-    list-style: none;
-    display: inline-block;
-    margin: 0 20px;
-    font-size: 20px;
-    position: relative;
-}
-.navbar ul li a{
-    text-decoration: none;
-    color: white;
-    text-transform: uppercase;
-}
-.navbar ul li::after{
-    content: '';
-    height: 3px;
-    width: 0%;
-    background: white;
-    position: absolute;
-    left: 0;
-    bottom: -5px;
-    transition: 0.5s;
-}
-.navbar ul li:hover::after{
-    width: 100%;
-}
-.socials{
-    border: 100px;
-}
-.socials h1{
-    font-size: 70px;
-    margin-left: 820px;
-    font-weight: bold;
-}
-.socials p{
-    font-size: 25px;
-    margin-left: 920;
-    color: white;
-    font-weight: bold;
-}
+   
+    <link rel="icon" href="./logo.png" type="image/icon type">
+
+</head>
+
+
+
+<body>
+
+
+
+  <div class="banner">
+    <div class="navbar">
+    <img src="logo.png" class="logo">
+    <ul>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+</div>
+    
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QIbw9P8daDuxlW8Og8BRAVP"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+    
+  &nbsp&nbsp&nbsp&nbsp&nbsp
+
+  <script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QId9FP8daDuxlW8oKSFXWdq"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+&nbsp&nbsp&nbsp&nbsp&nbsp
+
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QId6IP8daDuxlW8a7f3rLzi"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+&nbsp&nbsp&nbsp&nbsp&nbsp
+
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QIcwuP8daDuxlW8TxMlRI5K"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+&nbsp&nbsp&nbsp&nbsp&nbsp
+
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QIcouP8daDuxlW8wC7978xu"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+&nbsp&nbsp&nbsp&nbsp&nbsp
+
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QIcBZP8daDuxlW8tz040CpV"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+&nbsp&nbsp&nbsp&nbsp&nbsp
+
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QIc8wP8daDuxlW8b4EpMqvi"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+
+</div>
+
+
+
+</html>
+
 
