--- a/shop.html
+++ b/shop.html
@@ -2,8 +2,7 @@
 <head>
     <title>Shop</title>
     <link rel="stylesheet" href="shopstyle.css">
-
-   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="icon" href="./logo.png" type="image/icon type">
 
 </head>
@@ -22,7 +21,8 @@
         <li><a href="contact.html">Contact Us</a></li>
     </ul>
 </div>
-    
+ 
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 <script async
   src="https://js.stripe.com/v3/buy-button.js">
 </script>
@@ -92,8 +92,11 @@
   publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
 >
 </stripe-buy-button>
+<br>
+<br>
 
-&nbsp&nbsp&nbsp&nbsp&nbsp
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
 
 <script async
   src="https://js.stripe.com/v3/buy-button.js">
@@ -106,10 +109,88 @@
 </stripe-buy-button>
 
 
+&nbsp&nbsp&nbsp&nbsp&nbsp
+
+
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QJMRZP8daDuxlW8Z9jqs1GK"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+&nbsp&nbsp&nbsp&nbsp&nbsp
+
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QJMWrP8daDuxlW8z7DcDqV1"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+&nbsp&nbsp&nbsp&nbsp&nbsp
+
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QJMabP8daDuxlW8E4GgGHsi"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+&nbsp&nbsp&nbsp&nbsp&nbsp
+
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QJMd1P8daDuxlW8Rk08Heon"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+&nbsp&nbsp&nbsp&nbsp&nbsp
+
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QJMgDP8daDuxlW883iOYAW8"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+<br>
+<br>
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1QJOa4P8daDuxlW8DEM1eyI5"
+  publishable-key="pk_live_51PwsdiP8daDuxlW8emiwyZsC7uHZvWmiyExYc8F4UiGGOVLJfhMLtW09dIwAKDzmPriFJ4UqS1D3vjgsIAbXElxV00WqeIMbsJ"
+>
+</stripe-buy-button>
+
+
+
 </div>
 
 
 
 </html>
+
+
 
 
