--- a/shop.html
+++ b/shop.html
@@ -2,10 +2,8 @@
 <head>
     <title>Shop</title>
     <link rel="stylesheet" href="shopstyle.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="icon" href="./logo.png" type="image/icon type">
-
-</head>
+    <meta name="viewport" content="initial-scale=1.0, width=400, minimum-scale=1.0, maximum-scale=1.0, form=no">
+  </head>
 
 
 
@@ -15,8 +13,8 @@
 
   <div class="banner">
     <div class="navbar">
-    <img src="logo.png" class="logo">
     <ul>
+        <li><a href="index.html">Home</li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="contact.html">Contact Us</a></li>
     </ul>
@@ -190,7 +188,4 @@
 
 
 </html>
-
-
-
 
