--- a/aboutus.html
+++ b/aboutus.html
@@ -2,13 +2,13 @@
     <head>
         <title>About Us</title>
         <link rel="stylesheet" href="aboutus.css">
-        
+        <meta name="viewport" content="initial-scale=1.0, width=400, minimum-scale=1.0, maximum-scale=1.0, form=no">
     </head>
     <body>
         <div class="banner">
             <div class="navbar">
-            <img src="logo.png" class="logo">
-            <ul>
+                <ul>
+                <li><a href="index.html">Home</li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
