--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="initial-scale=1.0, width=400, minimum-scale=1.0, maximum-scale=1.0, form=no">
   <title>Contact </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="banner">
     <div class="navbar" >
-        <img src="logo.png" class="logo">
         <ul>
-            <li><a href="shop.html">Shop</a></li>
-            <li><a href="aboutus.html">About us</a></li>
+            <li><a href="index.html">Home</li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </div>
  
