--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <title>Certishop</title>
+        <meta name="viewport" content="initial-scale=1.0, width=400, minimum-scale=1.0, maximum-scale=1.0, form=no">
         <link rel="stylesheet" href="indexstyle.css">
-    </head>
+        </head>
     <body>
         <div class="banner">
             <div class="navbar" >
-                <img src="logo.png" class="logo">
                 <ul>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
